variavel/sg/main.tf
resource "aws_security_group" "ssh"{
    name = "allow ssh"
    description = "Habilitar conexoes SSH"
    #Habilitando ssh
    ingress{
        from_port = 22
        to_port =22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    #habilitando internet
    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }

    #Habilitando hhtps
    ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }

    #habilitando saída internet
    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
